--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <!-- /Fontsampler -->
 </head>
 
+<style>
+div {
+  border: 1px solid black;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
+  background-color: lightblue;
+}
+</style>
+
 <body>
 
     <main>
