--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/fontsampler-skin.css">
     <!-- /Fontsampler -->
 <style>
-div {
+body {
   border: 1px solid black;
   margin-top: 50px;
   margin-bottom: 100px;
