--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Just some styling for this documentaiton page -->
     <link rel="stylesheet" href="assets/demo.css">
 
